[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Characters/Ordnance/Healing/HealingArea2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Ordnance/Healing/HealingCircle.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/HealingParticles.tres" type="Material" id=3]
[ext_resource path="res://Sprites/Ordnance/Healing/HealingHoop.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Ordnance/Healing/HealingParticlesTexture.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/HealingLoops.tres" type="Material" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="HealingArea2D" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 0.7 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.143763, 1, 0.360837, 0.5 )
scale = Vector2( 0.6, 0.42 )
z_index = -1
texture = ExtResource( 2 )

[node name="HoopSprite" type="Sprite" parent="."]
modulate = Color( 0, 0.752941, 0.278431, 1 )
self_modulate = Color( 1, 1.8, 1, 1 )
scale = Vector2( 0.6, 0.42 )
z_index = -1
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="HealTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="HealingParticles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1.45, 1, 1 )
scale = Vector2( 1, 0.9 )
amount = 15
lifetime = 3.0
process_material = ExtResource( 3 )
texture = ExtResource( 5 )

[node name="HealingLoopsParticles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1.6, 1, 1 )
scale = Vector2( 0.6, 0.42 )
amount = 2
lifetime = 0.5
speed_scale = 0.5
process_material = ExtResource( 6 )
texture = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
